福島Project/src/objects/JFK_CommonTR__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>Bosyukai_Record__c</fullName>
        <description>レコードが募集回単位の情報の場合はTrueとなります。
レコードが支給時期単位の情報の場合はFalseとなります。</description>
        <formula>Not(IsBlank( JigyosyoTR_YearTime__c ))</formula>
        <label>募集回単位情報</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckSheetTR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>審査シート</label>
        <referenceTo>JFK_CheckSheetTR__c</referenceTo>
        <relationshipLabel>HD情報</relationshipLabel>
        <relationshipName>CheckSheetTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_Area_Kubun__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.Area_Kubun__c</formula>
        <label>エリア区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Bikou__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GS_Boshu_Kai__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.BosyuKai__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>募集回</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Boshu_Nendo__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.BosyuNendo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>募集年度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_CheckSheetURL1__c</fullName>
        <label>審査シートURL1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_CheckSheetURL2__c</fullName>
        <label>審査シートURL2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_DateIkkatuNyuryoku__c</fullName>
        <label>GS画面日付一括入力用</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_FirstTantosya_Status__c</fullName>
        <defaultValue>&apos;未着手&apos;</defaultValue>
        <label>1次担当者ステータス</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_FirstTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1次担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GS_FirstTantosya_Shikyus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_FubiNaiyo_Memo__c</fullName>
        <inlineHelpText>「不備有」時のみ</inlineHelpText>
        <label>不備内容メモ</label>
        <picklist>
            <picklistValues>
                <fullName>重点不備</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不備</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GS_HasshutuShiji_Ukebi__c</fullName>
        <label>発出指示受け日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JigyoshoCD__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.JigyoshoCD__c</formula>
        <label>事業所コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_JigyosyoMei__c</fullName>
        <label>事業所名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_JissekiHokokuSyorui_HikiwatashiBi__c</fullName>
        <label>実績報告書類引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiHokokusyo_JuryoBi__c</fullName>
        <label>実績報告書類受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiHoseiShido_JisshiBi__c</fullName>
        <label>実績補正指導実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_ChakusyuBi_1st__c</fullName>
        <label>実績書類審査着手日（１次）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_ChakusyuBi_2nd__c</fullName>
        <label>実績書類審査着手日（２次）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_ChakusyuBi__c</fullName>
        <label>実績書類審査着手日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_KanryoBi_1st__c</fullName>
        <label>実績書類審査完了日（１次）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_KanryoBi_2nd__c</fullName>
        <label>実績書類審査完了日（２次）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekiSyoruiShinsa_KanryoBi__c</fullName>
        <label>実績書類審査完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekigakuData_HikiwatashiBi__c</fullName>
        <label>支給実額電子データ引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekigakuHoseiShido_JisshiBi__c</fullName>
        <label>支給実額補正指導実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekigakuKeisan_ChakusyuBi__c</fullName>
        <label>支給実額電子計算着手日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_JissekigakuKeisan_KanryoBi__c</fullName>
        <label>支給実額電子計算完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_10thTokusokuJissiBi__c</fullName>
        <label>未提出者10次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_1stTokusokuJissiBi__c</fullName>
        <label>未提出者1次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_2ndTokusokuJissiBi__c</fullName>
        <label>未提出者2次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_3rdTokusokuJissiBi__c</fullName>
        <label>未提出者3次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_4thTokusokuJissiBi__c</fullName>
        <label>未提出者4次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Miteisyutsusya_5thTokusokuJissiBi__c</fullName>
        <label>未提出者5次督促実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_RemindDM_HassoBi__c</fullName>
        <label>リマインドDM発送日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_RemindDM_InsatsuBi__c</fullName>
        <description>リマインドDMを印刷した日</description>
        <label>リマインドDM印刷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_RemindDM_Status__c</fullName>
        <description>リマインドDMの状況</description>
        <label>リマインドDMステータス</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_RodoshaShimei__c</fullName>
        <formula>MD_TaisyoRodosyaShimei__r.LastName &amp; &quot; &quot; &amp; MD_TaisyoRodosyaShimei__r.FirstName</formula>
        <label>労働者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_SecondTantosya_Status__c</fullName>
        <defaultValue>&apos;未着手&apos;</defaultValue>
        <label>2次担当者ステータス</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_SecondTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2次担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GS_SecondTantosya_Shikyus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_Seiri_No__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.SeiriNO__c</formula>
        <label>整理番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuDenshiData_JuryoBi__c</fullName>
        <label>支給電子データ受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuJiki__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.BosyuJoho_ShikyuJiki__r.ShikyuJiki_Sushiki__c</formula>
        <label>支給時期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuKetteiTsuchisho_HassoBi__c</fullName>
        <label>支給決定通知書発送日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuKetteiTsuchisho_HikiwatashiBi__c</fullName>
        <label>支給決定通知書引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuKetteiTsuchisho_JuryoBi__c</fullName>
        <label>支給決定通知書受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuShinseiFubi_Umu__c</fullName>
        <label>支給当申請の不備有無</label>
        <picklist>
            <picklistValues>
                <fullName>有り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuShinseiSyorui_HikiwatashiBi__c</fullName>
        <label>支給申請書類引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuShinseisyo_JuryoBi__c</fullName>
        <label>支給申請書類受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuSyoruiShinsa_ChakusyuBi__c</fullName>
        <label>支給書類審査着手日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuSyoruiShinsa_KanryoBi__c</fullName>
        <label>支給書類審査完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuYoteigaku_Data_HikiwatashiBi__c</fullName>
        <label>支給予額電子データ引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuYoteigaku_Keisan_ChakusyuBi__c</fullName>
        <label>支給予額電子計算着手日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyuYoteigaku_Keisan_KanryoBi__c</fullName>
        <label>支給予額電子計算完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_Joutai__c</fullName>
        <formula>IF(GS_Shikyu_Torikeshi__c = true,&quot;支給終了&quot;, IF(GS_Shikyu_Syuryo__c = true ,&quot;支給終了&quot;,&quot;&quot;))</formula>
        <label>支給状態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_KenchoKensyu_Jokyo__c</fullName>
        <label>支給県庁検収結果状況</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_KenchoKensyu_NGBi__c</fullName>
        <label>支給県庁検収NG日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_KenchoKensyu_OKBi__c</fullName>
        <label>支給県庁検収OK日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_NGTaio_KanryoBi__c</fullName>
        <label>支給NG対応完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_Syuryo__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.Shikyu_Syuryo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支給終了フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GS_Shikyu_Torikeshi__c</fullName>
        <formula>JijyosyoTR_ShikyuJiki__r.Shikyu_Torikeshi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支給取消フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GS_ShikyugakuTsuchisho_HassoBi__c</fullName>
        <label>支給額通知書発送日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyugakuTsuchisho_JuryoBi__c</fullName>
        <label>支給額通知書受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ShikyugauTsuchisho_HikiwatashiBi__c</fullName>
        <label>支給額通知書引渡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Status__c</fullName>
        <formula>IF(AND(ISNULL(GS_RemindDM_HassoBi__c ) = false,ISNULL(GS_JissekiHokokusyo_JuryoBi__c)= false,ISNULL(GS_JissekiSyoruiShinsa_ChakusyuBi__c)= false,ISNULL(GS_JissekiSyoruiShinsa_KanryoBi__c)= false,ISNULL(GS_JissekigakuData_HikiwatashiBi__c)= false,ISNULL(GS_HasshutuShiji_Ukebi__c)= false,ISNULL(GS_ShikyugauTsuchisho_HikiwatashiBi__c)= false,ISNULL(GS_ShikyugakuTsuchisho_JuryoBi__c)= false,ISNULL(GS_ShikyugakuTsuchisho_HassoBi__c)= false,ISNULL(GS_JissekiHokokuSyorui_HikiwatashiBi__c)= false),&quot;【完了】&quot;,IF(ISNULL(GS_JissekiHokokuSyorui_HikiwatashiBi__c)= false,&quot;審査書類納品済み&quot;,IF(ISNULL(GS_ShikyugakuTsuchisho_HassoBi__c)= false,&quot;通知書類発送済み&quot;,IF(ISNULL(GS_ShikyugakuTsuchisho_JuryoBi__c)= false,&quot;通知書受領済み&quot;,IF(ISNULL(GS_ShikyugauTsuchisho_HikiwatashiBi__c)= false,&quot;通知書引渡し済み&quot;,IF(ISNULL(GS_HasshutuShiji_Ukebi__c)= false,&quot;県庁発出指示受け済み&quot;,IF(ISNULL(GS_JissekigakuData_HikiwatashiBi__c)= false,&quot;審査データ納品済み&quot;,IF(ISNULL(GS_JissekiSyoruiShinsa_KanryoBi__c)= false,&quot;審査完了&quot;,IF(ISNULL(GS_JissekiSyoruiShinsa_ChakusyuBi__c)= false,&quot;審査中&quot;,IF(ISNULL(GS_JissekiHokokusyo_JuryoBi__c)= false,&quot;報告書類受領済み&quot;,IF(ISNULL(GS_RemindDM_HassoBi__c ) = false,&quot;リマインドDM発送済み&quot;,&quot;未着手&quot;)))))))))))</formula>
        <label>ステータス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_ThirdTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3次担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GS_ThirdTantosya_Shikyus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HD_HoseiJiko_1st__c</fullName>
        <label>補正事項（１次）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HD_HoseiJiko_2nd__c</fullName>
        <label>補正事項（２次）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HD_HoseiZumi_1st__c</fullName>
        <defaultValue>false</defaultValue>
        <label>補正済（１次）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HD_HoseiZumi_2nd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>補正済（２次）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HD_Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>P補正</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>事業所確認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>提出依頼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>郵送確認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>県確認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR入力</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HD_Tantosya1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HD_Tantosyas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HD_Tantosya2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HD_Tantosyas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HM_Aitesaki__c</fullName>
        <label>相手先</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HM_HoseiMemo__c</fullName>
        <label>補正メモ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HM_TaioBi__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>対応日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HM_Tantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HM_Tantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Biko__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_HenkoGo_Data__c</fullName>
        <label>変更後データ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_HenkoKasyo__c</fullName>
        <label>変更箇所</label>
        <picklist>
            <picklistValues>
                <fullName>（事業主）名称</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>申請事業所　住所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>代表者（役職　氏名）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>助成対象事業所　住所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>雇用保険適用事業所番号</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>補助金/対象分野名称</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対象労働者氏名/フリガナ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>震災時の住所</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>性別</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>生年月日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>雇入れ年月日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>正規雇用・有期雇用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>雇用契約期間</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>フルタイム・短時間</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>新規雇用・再雇用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>申請額（万円）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>支給開始日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_HenkoMae_Data__c</fullName>
        <label>変更前データ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_HenkoRiyu__c</fullName>
        <label>変更理由</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_JigyoshoJoho_KoshinBi__c</fullName>
        <label>事業所情報更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_KakuninBi_1st__c</fullName>
        <label>確認日1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_KakuninBi_2nd__c</fullName>
        <label>確認日2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_KakuninSya_1st__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>確認者1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_KakuninSya_1sts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_KakuninSya_2nd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>確認者2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_KakuninSya_2nds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_KenHokokuBi__c</fullName>
        <label>県報告日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Kosinsya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>実データ更新者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Kosinsyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_NyuryokuBi_Henko_1st__c</fullName>
        <label>入力日1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_NyuryokuSya_Henko_1st__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>入力者1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_NyuryokuSya_Henko_1sts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_RodosyaJohoKoshinBi__c</fullName>
        <label>労働者情報更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JTL_Hizuke__c</fullName>
        <label>日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JTL_KadenNaiyo__c</fullName>
        <label>架電内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JTL_Kaden_Juryo__c</fullName>
        <label>架電／受領</label>
        <picklist>
            <picklistValues>
                <fullName>架電</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>受領</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JTL_Tantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JTL_Tantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR_YearTime__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所(支給/実績)_年度・回</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>汎用TR（年度・回）</relationshipLabel>
        <relationshipName>JigyosyoTR_YearTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JijyosyoTR_ShikyuJiki__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所(支給/実績)_支給時期</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>汎用TR（支給時期）</relationshipLabel>
        <relationshipName>JigyosyoTR_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD_CenterTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>センター担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MD_CenterTantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD_DairiNin__c</fullName>
        <label>代理人</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Group__c</fullName>
        <label>グループ</label>
        <picklist>
            <picklistValues>
                <fullName>連絡先の指定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>委任状の提出</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>支給停止中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>事業主都合の離職あり（当該労働者の補充不可）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>出向者の発生</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD_IninKengen__c</fullName>
        <label>委任権限</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_JigyoshoTantosya__c</fullName>
        <label>事業所担当者</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_KakuninBi__c</fullName>
        <label>確認日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_RenrakuSaki__c</fullName>
        <label>連絡先</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_ShikyuTeishi_KaishiBi__c</fullName>
        <label>支給停止開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_SyukkoKaishiBi__c</fullName>
        <label>出向開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_TaisyoRodosyaShimei__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>対象労働者氏名</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>申送り事項（対象労働者）</relationshipLabel>
        <relationshipName>MD_TaisyoRodosyaShimeis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD_TeishiRiyu__c</fullName>
        <label>停止理由</label>
        <picklist>
            <picklistValues>
                <fullName>再雇用率80%超え</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>必要労働者数未達</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTMKST_ShikyuTeishi_KaishiBi__c</fullName>
        <description>停止パターンAによる、各労働者の支給停止開始日</description>
        <label>支給停止開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTMKST_ShikyuTeishi_Nissu__c</fullName>
        <description>支給開始日～支給終了日の日数</description>
        <formula>PTMKST_ShikyuTeishi_SyuryoBi__c  -  PTMKST_ShikyuTeishi_KaishiBi__c  -  IF ( PTMKST_Urudoshi_Wo_Fukumu__c , 1, 0)  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支給停止日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTMKST_ShikyuTeishi_SyuryoBi__c</fullName>
        <description>停止パターンAによる、各労働者の支給停止終了日</description>
        <label>支給停止終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTMKST_Urudoshi_Wo_Fukumu__c</fullName>
        <description>支給開始日～支給終了日に2月29日を含むか否か</description>
        <formula>AND( PTMKST_ShikyuTeishi_KaishiBi__c &lt;DATE(YEAR( PTMKST_ShikyuTeishi_SyuryoBi__c )-MOD(YEAR( PTMKST_ShikyuTeishi_SyuryoBi__c ),4),2,29),DATE(YEAR( PTMKST_ShikyuTeishi_SyuryoBi__c )-MOD(YEAR( PTMKST_ShikyuTeishi_SyuryoBi__c ),4),2,29)&lt;= PTMKST_ShikyuTeishi_SyuryoBi__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>うるう年を含む</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTMK_KekkinnBi_From__c</fullName>
        <label>１ヶ月超無給欠勤開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTMK_KekkinnBi_To__c</fullName>
        <label>１ヶ月超無給欠勤終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTMK_Tantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PTMK_Tantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordKBN__c</fullName>
        <label>レコード区分</label>
        <picklist>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTMK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTMKST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RodosyaTR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>労働者TRの情報を参照します</description>
        <label>労働者TR</label>
        <referenceTo>JFK_RodoSyaTR__c</referenceTo>
        <relationshipLabel>汎用TR</relationshipLabel>
        <relationshipName>RodosyaTRs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR_Category__c</fullName>
        <label>カテゴリー</label>
        <picklist>
            <picklistValues>
                <fullName>【支給申請】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【実績報告】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【その他】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【支給申請＋実績報告】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【支給申請＋その他】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【実績報告＋その他】</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【支給申請＋実績報告＋その他】</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_DateTime__c</fullName>
        <label>日付／時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR_Hoho__c</fullName>
        <label>方法</label>
        <picklist>
            <picklistValues>
                <fullName>電話</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>窓口</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>メール</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_JigyosyoMei__c</fullName>
        <label>事業所名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_KaitoBi__c</fullName>
        <label>回答日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR_KaitoNaiyo__c</fullName>
        <label>回答内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR_Naiyo__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Name__c</fullName>
        <label>お名前</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Renrakusaki__c</fullName>
        <label>連絡先</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未着</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Tantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TR_Tantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YS_Biko__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YS_ChinginDaicho__c</fullName>
        <defaultValue>false</defaultValue>
        <label>賃金台帳</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YS_Nyuryokusya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>入力者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserTR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YS_ShikyuOrHoju__c</fullName>
        <formula>IF (  ISBLANK( RodosyaTR__r.Rodosya__r.HojuMoto_Rodosya__c ), &quot;支給決定者&quot;, &quot;補充労働者&quot;)</formula>
        <label>支給決定者or補充労働者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS_SyukkinBo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>出勤簿又はタイムカード</label>
        <type>Checkbox</type>
    </fields>
    <label>汎用TR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RecordKBN__c</columns>
        <columns>JijyosyoTR_ShikyuJiki__c</columns>
        <columns>RodosyaTR__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GS_Jisseki</fullName>
        <columns>NAME</columns>
        <columns>JijyosyoTR_ShikyuJiki__c</columns>
        <columns>GS_JigyosyoMei__c</columns>
        <columns>RodosyaTR__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>GS_RemindDM_HassoBi__c</columns>
        <columns>GS_JissekiHokokusyo_JuryoBi__c</columns>
        <columns>GS_JissekiSyoruiShinsa_ChakusyuBi__c</columns>
        <columns>GS_JissekiHoseiShido_JisshiBi__c</columns>
        <columns>GS_ShikyuYoteigaku_Keisan_ChakusyuBi__c</columns>
        <columns>GS_ShikyuYoteigaku_Keisan_KanryoBi__c</columns>
        <columns>GS_JissekiHokokuSyorui_HikiwatashiBi__c</columns>
        <columns>TR_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordKBN__c</field>
            <operation>equals</operation>
            <value>GS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>JFK_CommonTR__c.GS_JigyoshoJisseki_ShikyuJiki</value>
        </filters>
        <label>GS_業務進捗管理表（実績報告）</label>
    </listViews>
</CustomObject>